fix #2833 Add bulk document indexing API to Admin API